# SkyPredictorDemo

./: Makefile  README.md  pyproject.toml
client/: generate.py
proto/: generate.py  service-mesh.proto
